fix jump height

--- a/css/app.css
+++ b/css/app.css
@@ -37,6 +37,7 @@
 	background-size: cover;
 	position: fixed;
 	top: 0;
+	bottom: 0;
 	transition: all 1s;
 	-webkit-transition: all 1s;
 }
